--- a/app/gui/TextStimuliTestingDesignWidget.ui
+++ b/app/gui/TextStimuliTestingDesignWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>900</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,10 @@
   <widget class="QLabel" name="text_widget">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>120</y>
-     <width>200</width>
-     <height>200</height>
+     <x>0</x>
+     <y>0</y>
+     <width>900</width>
+     <height>600</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -33,6 +33,19 @@
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="display_result_button">
+   <property name="geometry">
+    <rect>
+     <x>669</x>
+     <y>560</y>
+     <width>221</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Afficher les résultats</string>
    </property>
   </widget>
  </widget>
