--- a/app/gui/design/window/StimuliTestingDesign.ui
+++ b/app/gui/design/window/StimuliTestingDesign.ui
@@ -19,7 +19,7 @@
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>600</height>
+     <height>431</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -46,6 +46,50 @@
    </property>
    <property name="text">
     <string>Afficher les résultats</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="consigne">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>50</y>
+     <width>800</width>
+     <height>381</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>1</horstretch>
+     <verstretch>1</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="text">
+    <string>Consigne</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="begin_text">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>360</y>
+     <width>881</width>
+     <height>191</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>1</horstretch>
+     <verstretch>1</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="text">
+    <string>Cliquer pour commencer le test</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
