--- a/app/gui/design/window/StimuliResultsDesign.ui
+++ b/app/gui/design/window/StimuliResultsDesign.ui
@@ -69,7 +69,7 @@
      <x>670</x>
      <y>50</y>
      <width>161</width>
-     <height>81</height>
+     <height>75</height>
     </rect>
    </property>
    <property name="font">
@@ -119,7 +119,7 @@
      <x>670</x>
      <y>170</y>
      <width>161</width>
-     <height>81</height>
+     <height>75</height>
     </rect>
    </property>
    <property name="font">
@@ -144,7 +144,7 @@
      <x>580</x>
      <y>140</y>
      <width>251</width>
-     <height>51</height>
+     <height>50</height>
     </rect>
    </property>
    <property name="font">
@@ -316,14 +316,64 @@
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>720</x>
-     <y>550</y>
+     <x>10</x>
+     <y>560</y>
      <width>160</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
     <string>Retour à l'accueil</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="correct_authorized_response_number">
+   <property name="geometry">
+    <rect>
+     <x>515</x>
+     <y>75</y>
+     <width>161</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>18</pointsize>
+     <weight>50</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="correct_forbidden_response_number">
+   <property name="geometry">
+    <rect>
+     <x>515</x>
+     <y>195</y>
+     <width>161</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>18</pointsize>
+     <weight>50</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
    </property>
   </widget>
  </widget>
