--- a/app/gui/design/window/home.ui
+++ b/app/gui/design/window/home.ui
@@ -1,75 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>HomeDesign</class>
+ <widget class="QWidget" name="HomeDesign">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>900</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPushButton" name="start_test_button">
+  <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>160</width>
-     <height>32</height>
+     <x>10</x>
+     <y>10</y>
+     <width>881</width>
+     <height>531</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Démarrer un test</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="manage_patients_button">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>60</y>
-     <width>160</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Gérer les patients</string>
-   </property>
-  </widget>
-  <widget class="QDateTimeEdit" name="dateTimeEdit">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>20</y>
-     <width>194</width>
-     <height>23</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QWidget" name="formLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>120</y>
-     <width>351</width>
-     <height>121</height>
-    </rect>
-   </property>
-   <layout class="QFormLayout" name="formLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="prNomLabel">
-      <property name="text">
-       <string>Prénom</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="prNomLineEdit"/>
-    </item>
-   </layout>
+   <layout class="QGridLayout" name="gridLayout"/>
   </widget>
  </widget>
  <resources/>
