Première implémentation de l'écran de configuration

--- a/app/assets/stylesheet.qss
+++ b/app/assets/stylesheet.qss
@@ -9,7 +9,7 @@ QTableWidget {
 }
 
 QLineEdit, QDateEdit, QDateTimeEdit, QLabel, QPushButton, QListWidget, QTabWidget, QDialog, QComboBox, QSpinBox,
-QTextBrowser, QTextEdit, QHeaderView, QHeaderView::section, QTableWidgetItem {
+QDoubleSpinBox, QTextBrowser, QTextEdit, QHeaderView, QHeaderView::section, QTableWidgetItem {
     font-family: "Source Sans Pro";
     font-weight: 200;
     font-size: 16px;
@@ -21,7 +21,7 @@ QLineEdit, QDateEdit, QDateTimeEdit {
 }
 
 QLineEdit, QDateEdit, QDateTimeEdit, QPushButton, QDialog, QComboBox,QComboBox:editable,
-QSpinBox, QHeaderView, QHeaderView::section, QTableWidgetItem {
+QSpinBox, QDoubleSpinBox, QHeaderView, QHeaderView::section, QTableWidgetItem {
 	border-radius: 0px;
     border-width: 1px;
     border-style: solid;
@@ -109,7 +109,7 @@ QListWidget::item:selected, QTabBar::tab:selected, QTabWidget {
     background-color: #555a5a;
 }
 
-QPushButton, QComboBox, QSpinBox {
+QPushButton, QComboBox, QSpinBox, QDoubleSpinBox {
     padding: 5px 15px;
 }
 
